# forgewatch

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  config.example.toml  install.sh  pyproject.toml  uninstall.sh  update.sh
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  development.md  systemd.md
docs/modules/: cli.md  config.md  daemon.md  dbus_service.md  indicator.md  notifier.md  poller.md  store.md  url_opener.md
forgewatch/: __init__.py  __main__.py  config.py  daemon.py  dbus_service.py  notifier.py  poller.py  store.py
forgewatch/cli/: __init__.py  _checks.py  _systemd.py  service.py  setup.py  uninstall.py
forgewatch/indicator/: __main__.py  _tray_state.py  app.py  client.py  tray.py  window.py
github_monitor/: __main__.py  config.py  daemon.py  dbus_service.py  notifier.py  poller.py  url_opener.py
github_monitor/indicator/: __main__.py  _window_helpers.py  app.py  client.py  models.py  tray.py  (+1 more)
systemd/: forgewatch-indicator.service  forgewatch.service  github-monitor.service
tests/: conftest.py  test_cli_checks.py  test_cli_init.py  test_cli_output.py  test_cli_prompts.py  test_cli_service.py  test_cli_setup.py  test_cli_systemd.py  test_cli_uninstall.py  test_config.py  test_daemon.py  test_dbus_service.py  test_indicator_app.py  test_indicator_client.py  test_indicator_main.py  test_indicator_tray.py  test_indicator_window.py  test_main.py  test_notifier.py  test_poller.py  test_store.py  test_url_opener.py
(+2 files in other folders)
