[project]
name = "github-monitor"
version = "0.1.0"
description = "Daemon that monitors GitHub PRs and exposes state over D-Bus"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9,<4",
    "dbus-next>=0.2.3,<1",
]

[project.scripts]
github-monitor = "github_monitor.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]
